@@ -97,6 +97,7 @@ namespace libtorrent
 		, m_state(read_protocol_identifier)
 #ifndef TORRENT_DISABLE_EXTENSIONS
 		, m_upload_only_id(0)
+		, m_dont_have_id(0)
 		, m_supports_extensions(false)
 #endif
 		, m_supports_dht_port(false)
@@ -132,6 +133,7 @@ namespace libtorrent
 		, m_state(read_protocol_identifier)
 #ifndef TORRENT_DISABLE_EXTENSIONS
 		, m_upload_only_id(0)
+		, m_dont_have_id(0)
 		, m_supports_extensions(false)
 #endif
 		, m_supports_dht_port(false)
@@ -1463,7 +1465,17 @@ namespace libtorrent
 		if (extended_id == upload_only_msg)
 		{
 			if (!packet_finished()) return;
+			if (packet_size() != 1) return;
 			set_upload_only(detail::read_uint8(recv_buffer.begin));
+			return;
+		}
+
+		if (extended_id == dont_have_msg)
+		{
+			if (!packet_finished()) return;
+			if (packet_size() != 4) return;
+			int piece = detail::read_uint32(recv_buffer.begin) != 0;
+			incoming_dont_have(piece);
 			return;
 		}
 
@@ -1520,7 +1532,10 @@ namespace libtorrent
 
 		// upload_only
 		if (lazy_entry const* m = root.dict_find_dict("m"))
-			m_upload_only_id = m->dict_find_int_value("upload_only", 0);
+		{
+			m_upload_only_id = boost::uint8_t(m->dict_find_int_value("upload_only", 0));
+			m_dont_have_id = boost::uint8_t(m->dict_find_int_value("lt_donthave", 0));
+		}
 
 		// there is supposed to be a remote listen port
 		int listen_port = root.dict_find_int_value("p");
@@ -1872,6 +1887,7 @@ namespace libtorrent
 		TORRENT_ASSERT(t);
 
 		m["upload_only"] = upload_only_msg;
+		m["lt_donthave"] = dont_have_msg;
 
 		// if we're using lazy bitfields or if we're super seeding, don't say
 		// we're upload only, since it might make peers disconnect
